# summary-gpt-server-admin

./: .gitignore  Cargo.toml  Dockerfile
configs/: config.toml
src/: db.rs  error.rs  lib.rs  main.rs  setting.rs
src/api/: admin.rs  client.rs  mod.rs  test_api.rs
src/client/: mod.rs
src/client/entity/: auth_site.rs  mod.rs  user.rs
src/client/model/: auth_site_model.rs  mod.rs  user_model.rs
src/utils/: date_utils.rs  entity.rs  mod.rs  uuid.rs
